# ai-code

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TUI.md  run.sh  rustfmt.toml  symbols.txt
examples/: agent.rs  input-async.rs  input.rs
src/: main.rs  workarea.rs
