[package]
name = "ai"
version = "0.23.3"
edition = "2024"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
ai-agent = { version = "*", path = "../ai-agent" }

# FFI
libc = "0.2"
uniffi = { version = "0", features = ["tokio"] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# TUI framework
crossterm = { version = "0.29", default-features = false, features = ["use-dev-tty", "event-stream"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
dirs = "5.0"
which = "6.0"
uuid = { version = "1", features = ["v4"] }

# Context/History dependencies
chrono = "0.4"
regex = "1.10"
futures = "0.3"
sha2 = "0.10"
log = "0.4"
base64 = "0.22"

# Transport dependencies
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
url = "2"

# Additional utilities
unicode-width = "0.1"
lazy_static = "1.4"
parking_lot = "0.12"
event-listener = "5"
hex = "0.4"
async-stream = "0.3"
sha1 = "0.10"
digest = "0.10"
unicode-normalization = "0.1"
inquire = "0.9.4"
colored = "3.1.1"
typed-builder = "0.23"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.1"
rexpect = "0.4"

